Fix margins on mobile /display.

--- a/public/assets/css/mobile.css
+++ b/public/assets/css/mobile.css
@@ -415,7 +415,7 @@ hr{
     width: auto;
     height: auto;
     min-width: 225px;
-    margin: 12px 3px 12px 12px;
+    margin: 3px 6px;
     padding: 6px;
     border-radius: 6px;
     background-color: white;
@@ -427,7 +427,7 @@ hr{
     width: auto;
     height: auto;
     min-width: 225px;
-    margin: 12px 12px 12px 3px;
+    margin: 3px 6px;
     padding: 6px;
     border-radius: 6px;
     background-color: white;
